# IPS-Viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: rolling-release.yml
Resources/Windows/: win.rc.in
Resources/linux/appimage/: org.kylon.ipsvw.appdata.xml  org.kylon.ipsvw.desktop
src/: IPS.cpp  IPS.h  IPSRecord.h  RLERecord.h  Record.h  ipsRecord.h  mainwindow.cpp  mainwindow.h  patchviewdialog.cpp  patchviewdialog.h  record.h  recordSize.h  rleRecord.h
ui/: mainwindow.ui  patchviewdialog.ui
